# Games101-Assignment

./: README.md
assignment0/: CMakeLists.txt  main.cpp
assignment1/: CMakeLists.txt  main.cpp
assignment2/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
assignment3/: CMakeLists.txt  Shader.hpp  Texture.hpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
assignment4/: CMakeLists.txt  main.cpp
assignment5/: Renderer.cpp  Triangle.hpp
assignment6/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp
